[refactor] refactoring some endpoints
